{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 21,
  "lineage": "511534eb-d845-cf41-9b34-3ca314266fd8",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private-allow-mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-25T18:59:47.270-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-c730bef52d83/global/firewalls/private-vpc-allow-mysql",
            "log_config": [],
            "name": "private-vpc-allow-mysql",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/networks/private-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-04-c730bef52d83",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/firewalls/private-vpc-allow-mysql",
            "source_ranges": [
              "10.1.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-mysql"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.private-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private-allow-ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-06-25T18:59:47.564-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-c730bef52d83/global/firewalls/private-vpc-allow-ping",
            "log_config": [],
            "name": "private-vpc-allow-ping",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/networks/private-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-04-c730bef52d83",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/firewalls/private-vpc-allow-ping",
            "source_ranges": [
              "10.1.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.private-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private-allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-25T18:59:47.640-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-c730bef52d83/global/firewalls/private-vpc-allow-rdp",
            "log_config": [],
            "name": "private-vpc-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/networks/private-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-04-c730bef52d83",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/firewalls/private-vpc-allow-rdp",
            "source_ranges": [
              "10.1.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-rdp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.private-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-25T18:59:47.589-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-c730bef52d83/global/firewalls/private-vpc-allow-ssh",
            "log_config": [],
            "name": "private-vpc-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/networks/private-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-04-c730bef52d83",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/firewalls/private-vpc-allow-ssh",
            "source_ranges": [
              "10.1.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.private-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public-allow-ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-06-25T18:59:47.703-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-c730bef52d83/global/firewalls/public-vpc-allow-ping",
            "log_config": [],
            "name": "public-vpc-allow-ping",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/networks/public-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-04-c730bef52d83",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/firewalls/public-vpc-allow-ping",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.public-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public-allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-25T18:59:47.713-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-c730bef52d83/global/firewalls/public-vpc-allow-rdp",
            "log_config": [],
            "name": "public-vpc-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/networks/public-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-04-c730bef52d83",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/firewalls/public-vpc-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-rdp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.public-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-25T18:59:47.715-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-c730bef52d83/global/firewalls/public-vpc-allow-ssh",
            "log_config": [],
            "name": "public-vpc-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/networks/public-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-04-c730bef52d83",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/firewalls/public-vpc-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.public-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mysql-client",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250610",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/zones/us-central1-a/disks/mysql-client-9808a183"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "creation_timestamp": "2025-06-25T19:00:02.360-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-04-c730bef52d83/zones/us-central1-a/instances/mysql-client-9808a183",
            "instance_id": "6039826449155823438",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "sdIWetKCzFg=",
            "name": "mysql-client-9808a183",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.58.89.244",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/networks/public-vpc",
                "network_ip": "10.1.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/regions/us-central1/subnetworks/public-subnet-1",
                "subnetwork_project": "qwiklabs-gcp-04-c730bef52d83"
              }
            ],
            "project": "qwiklabs-gcp-04-c730bef52d83",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/zones/us-central1-a/instances/mysql-client-9808a183",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh"
            ],
            "tags_fingerprint": "SFX9LNAOdG8=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.public-vpc",
            "google_compute_subnetwork.public-subnet_1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mysql-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250610",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/zones/us-central1-a/disks/mysql-server-9808a183"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "creation_timestamp": "2025-06-25T19:00:11.178-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-04-c730bef52d83/zones/us-central1-a/instances/mysql-server-9808a183",
            "instance_id": "3600059139812824901",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "sdIWetKCzFg=",
            "name": "mysql-server-9808a183",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/networks/private-vpc",
                "network_ip": "10.2.2.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/regions/us-central1/subnetworks/private-subnet-1",
                "subnetwork_project": "qwiklabs-gcp-04-c730bef52d83"
              }
            ],
            "project": "qwiklabs-gcp-04-c730bef52d83",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/zones/us-central1-a/instances/mysql-server-9808a183",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-mysql",
              "allow-ssh"
            ],
            "tags_fingerprint": "38g-_spjAjI=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.private-vpc",
            "google_compute_subnetwork.private-subnet_1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "private-test-server-linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250610",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/zones/us-central1-a/disks/private-test-server-linux-9808a183"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "creation_timestamp": "2025-06-25T19:00:11.035-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-04-c730bef52d83/zones/us-central1-a/instances/private-test-server-linux-9808a183",
            "instance_id": "5543586881258723141",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "YFnuy_TZo8o=",
            "metadata_startup_script": "sudo apt-get update;",
            "name": "private-test-server-linux-9808a183",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/networks/private-vpc",
                "network_ip": "10.2.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/regions/us-central1/subnetworks/private-subnet-1",
                "subnetwork_project": "qwiklabs-gcp-04-c730bef52d83"
              }
            ],
            "project": "qwiklabs-gcp-04-c730bef52d83",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/zones/us-central1-a/instances/private-test-server-linux-9808a183",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh"
            ],
            "tags_fingerprint": "SFX9LNAOdG8=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.private-vpc",
            "google_compute_subnetwork.private-subnet_1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "test-server-linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250610",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/zones/us-central1-a/disks/public-test-server-linux-9808a183"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "creation_timestamp": "2025-06-25T19:00:03.024-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-04-c730bef52d83/zones/us-central1-a/instances/public-test-server-linux-9808a183",
            "instance_id": "392140103561058125",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "TMW0_lE16z4=",
            "metadata_startup_script": "#!/bin/bash\napt-get update\napt-get install -y python3-pip\npip3 install apache-beam\npip3 install google-cloud-bigquery\n",
            "name": "public-test-server-linux-9808a183",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.202.242.87",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/networks/public-vpc",
                "network_ip": "10.1.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/regions/us-central1/subnetworks/public-subnet-1",
                "subnetwork_project": "qwiklabs-gcp-04-c730bef52d83"
              }
            ],
            "project": "qwiklabs-gcp-04-c730bef52d83",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/zones/us-central1-a/instances/public-test-server-linux-9808a183",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh"
            ],
            "tags_fingerprint": "SFX9LNAOdG8=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.public-vpc",
            "google_compute_subnetwork.public-subnet_1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "private-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-04-c730bef52d83/global/networks/private-vpc",
            "mtu": 0,
            "name": "private-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "6072274119623251858",
            "numeric_id": "6072274119623251858",
            "project": "qwiklabs-gcp-04-c730bef52d83",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/networks/private-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "public-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-04-c730bef52d83/global/networks/public-vpc",
            "mtu": 0,
            "name": "public-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "4840949747964516242",
            "numeric_id": "4840949747964516242",
            "project": "qwiklabs-gcp-04-c730bef52d83",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/networks/public-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2025-06-25T19:00:09.183-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/qwiklabs-gcp-04-c730bef52d83/regions/us-central1/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/networks/private-vpc",
            "project": "qwiklabs-gcp-04-c730bef52d83",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/regions/us-central1/routers/nat-router"
          },
          "dependencies": [
            "google_compute_network.private-vpc",
            "google_compute_subnetwork.private-subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "private-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "qwiklabs-gcp-04-c730bef52d83/us-central1/nat-router/private-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "private-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "qwiklabs-gcp-04-c730bef52d83",
            "region": "us-central1",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.private-vpc",
            "google_compute_router.nat-router",
            "google_compute_subnetwork.private-subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private-subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-25T18:59:47.771-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.2.2.1",
            "id": "projects/qwiklabs-gcp-04-c730bef52d83/regions/us-central1/subnetworks/private-subnet-1",
            "ip_cidr_range": "10.2.2.0/24",
            "name": "private-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/networks/private-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-04-c730bef52d83",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/regions/us-central1/subnetworks/private-subnet-1",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 5164969790241052540
          },
          "dependencies": [
            "google_compute_network.private-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public-subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-25T18:59:48.190-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.1.1.1",
            "id": "projects/qwiklabs-gcp-04-c730bef52d83/regions/us-central1/subnetworks/public-subnet-1",
            "ip_cidr_range": "10.1.1.0/24",
            "name": "public-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/global/networks/public-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-04-c730bef52d83",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c730bef52d83/regions/us-central1/subnetworks/public-subnet-1",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 4267148692813846395
          },
          "dependencies": [
            "google_compute_network.public-vpc"
          ]
        }
      ]
    }
  ]
}